# ffmpeg_practice

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
ch0/: CMakeLists.txt  start.cpp
codec-example/: codec_factory.h  common.hpp
codec-example/decoder/: decoder.h  qsv_decoder.cpp  qsv_decoder.h  sw_decoder.cpp  sw_decoder.h  vaapi_decoder.cpp  vaapi_decoder.h
codec-example/encoder/: encoder.h  qsv_encoder.cpp  qsv_encoder.h  sw_encoder.cpp  sw_encoder.h  vaapi_encoder.cpp  vaapi_encoder.h
encoder-h264/: CMakeLists.txt  example.cpp.txt  h264encoder.cpp  h264encoder.h  start.cpp
filter-ch0/: CMakeLists.txt  start.cpp
mux-ch0/: CMakeLists.txt  start0.cpp
mux-ch1/: CMakeLists.txt  start.cpp  start1.cpp.txt
parser-h264/: CMakeLists.txt  h264bs.hpp  h264decoder.cpp  h264decoder.h  start.cpp  sw-h264-transcoder.cpp  sw-h264-transcoder.h
qsv-encoder-h264/: CMakeLists.txt  test.cpp
separate-aac/: CMakeLists.txt  start.cpp
vaapi-encoder-h264/: CMakeLists.txt  test.cpp
